--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -99,10 +99,11 @@ ja:
         title: "タイトル"
         start_at: "公開開始日時"
         end_at: "公開終了日時"
-        body: "内容"
-        article_images: "ブログ画像"
-        sets: "セット情報"
         category: "カテゴリー"
+        sets:
+          body: "内容"
+          article_images: "ブログ画像"
+        
   
   enumerize:
     article:
