--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -75,6 +75,7 @@ ja:
       news: お知らせ
       shop: 店舗
       article: ブログ
+      content: コンテンツ
     attributes:
       news:
         calendar_date: 日付
@@ -96,14 +97,13 @@ ja:
         gourmet_site_link: グルメサイトのリンク
         shop_image: 店舗画像
       article:
-        title: "タイトル"
-        start_at: "公開開始日時"
-        end_at: "公開終了日時"
-        category: "カテゴリー"
-        contents:
-          body: "内容"
-          article_images: "ブログ画像"
-        
+        title: タイトル
+        start_at: 公開開始日時
+        end_at: 公開終了日時
+        category: カテゴリー
+      content:
+        body: 内容
+        article_images: ブログ画像
   
   enumerize:
     article:
