contentモデルのarticle_imagesカラムをarticle_imageに変更したことによる各種ファイルのカラム名の変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -103,7 +103,7 @@ ja:
         category: カテゴリー
       content:
         body: 内容
-        article_images: ブログ画像
+        article_image: ブログ画像
   
   enumerize:
     article:
