update/adminモデルに追加した、roleカラムの日本語化とenumerizeで作成したrole列挙型の日本語化

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -106,6 +106,10 @@ ja:
         article_image: ブログ画像
   
   enumerize:
+    admin:
+      role:
+        member: メンバー
+        admin: 管理者
     article:
       category:
         event: 会社イベント
