--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -10,7 +10,7 @@ ja:
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
         email: メールアドレス
-        role: 役割
+        role: 権限
         name: 名前
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
