update/adminモデルのenumerizeで新しく管理者権限に追加したownerを日本語化

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -110,6 +110,7 @@ ja:
       role:
         member: メンバー
         admin: 管理者
+        owner: オーナー
     article:
       category:
         event: 会社イベント
