--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -137,6 +137,9 @@ ja:
           job_entry: 採用に関する事について
           franchise: ＦＣ募集について
           other: その他
+        contact_method:
+          email: メールアドレス
+          phone_number: 電話番号
         status:
           not_started: 未対応
           in_progress: 対応中
