--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -114,7 +114,7 @@ ja:
         phone_number: 電話番号
         callback_requested: 折り返し希望の有無
         contact_method: 連絡方法
-        status: 問い合わせステータス
+        status: 対応状況
         update_by: 更新者
         
   
