--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -158,3 +158,14 @@ ja:
         not_started: 未対応
         in_progress: 対応中
         completed: 対応済み
+    job_entry:
+      recruit_type:
+        regular_employee: 正社員
+        franchisee: フランチャイズ希望
+      sex:
+        male: 男性
+        female: 女性
+      status:
+        not_started: 未対応
+        in_progress: 対応中
+        completed: 対応済み
