--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -123,7 +123,7 @@ ja:
         name_kana: 名前(カナ)
         phone_number: 電話番号
         email: メールアドレス
-        birth_date: 誕生日
+        birth_date: 生年月日
         sex: 性別
         city_name: 市区町村
         address: 地名・番地
