--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,10 +1,10 @@
 ja:
   views:
     pagination:
-      first: "&laquo; 最初"
-      last: "最後 &raquo;"
-      previous: "&lsaquo; 前"
-      next: "次 &rsaquo;"
+      first: "&laquo; 最初のページ"
+      last: "最後のページ &raquo;"
+      previous: "&lsaquo; 前のページ"
+      next: "次のページ &rsaquo;"
       truncate: "..."
   activerecord:
     errors:
