--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -85,6 +85,7 @@ ja:
         start_at: 公開開始時間
         end_at: 公開終了時間
         body: 内容
+        state: 公開状態
       shop:
         name: 店舗名
         prefecture_id: 都道府県
@@ -103,6 +104,7 @@ ja:
         start_at: 公開開始日時
         end_at: 公開終了日時
         category: カテゴリー
+        state: 公開状態
       content:
         body: 内容
         article_image: ブログ画像
@@ -138,12 +140,21 @@ ja:
         member: メンバー
         admin: 管理者
         owner: オーナー
+    news:
+      state:
+        unpublished: 公開待ち
+        published:  公開済み
+        expired: 公開終了
     article:
       category:
         event: 会社イベント
         company_trip: 社員旅行
         staff_introduction: スタッフ紹介
         other: その他
+      state:
+        unpublished: 公開待ち
+        published:  公開済み
+        expired: 公開終了
     contact:
       contact_type:
         store_service: 店舗・サービスについて
