--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -143,7 +143,7 @@ ja:
     news:
       status:
         unpublished: 公開待ち
-        published:  公開済み
+        published:  公開中
         expired: 公開終了
     article:
       category:
@@ -153,7 +153,7 @@ ja:
         other: その他
       status:
         unpublished: 公開待ち
-        published:  公開済み
+        published:  公開中
         expired: 公開終了
     contact:
       contact_type:
