--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -100,6 +100,7 @@ ja:
         site_name: グルメサイト名
         gourmet_site_link: グルメサイトのリンク
         shop_image: 店舗画像
+        google_map_iframe: google-map
       article:
         title: タイトル
         start_at: 公開開始日時
