update/name_kanaカラムの日本語をフリガナに変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -116,7 +116,7 @@ ja:
         contact_type: お問い合わせタイプ
         message: 問い合わせ内容
         name: 名前
-        name_kana: 名前（カナ）
+        name_kana: フリガナ
         email: メールアドレス
         phone_number: 電話番号
         callback_requested: 折り返し希望の有無
@@ -126,7 +126,7 @@ ja:
       job_entry:
         recruit_type: 採用タイプ
         name: 名前
-        name_kana: 名前(カナ)
+        name_kana: フリガナ
         phone_number: 電話番号
         email: メールアドレス
         birth_date: 生年月日
