--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -138,6 +138,7 @@ ja:
         update_by: 更新者
         male: 男性
         female: 女性
+        other: その他
         
   
   enumerize:
@@ -185,6 +186,7 @@ ja:
       sex:
         male: 男性
         female: 女性
+        other: その他
       status:
         not_started: 未対応
         in_progress: 対応中
