--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -185,7 +185,7 @@ ja:
         regular_employee: 正社員
         franchisee: 暖簾分け希望正社員
         part_time_job: アルバイト
-        meal_with_president: 社長とサシ飯(お気軽に!)
+        meal_with_president: 体験入店
       sex:
         male: 男性
         female: 女性
